SKapad css nothing more

--- a/webbstuff/style.css
+++ b/webbstuff/style.css
@@ -1,1 +1,16 @@
-stuff mothafuckaaaaa
+/*
+----------------------------------------------------------------------------------
+
+GoCRAZY
+Programmerings cirkel
+Först skapad: 2012-16-10
+
+----------------------------------------------------------------------------------
+*//*
+----------------------------------------------------------------------------------
+
+Namn: Jesper Vesterberg
+      Daniel Häggkvist
+      Olov Långström
+----------------------------------------------------------------------------------
+*/
