--- a/webbstuff/style.css
+++ b/webbstuff/style.css
@@ -3,7 +3,7 @@
 
 GoCRAZY
 Programmerings cirkel
-Först skapad: 2012-16-10
+Först skapad: 2012-10-16
 
 ----------------------------------------------------------------------------------
 *//*
@@ -14,3 +14,57 @@ Namn: Jesper Vesterberg
       Olov Långström
 ----------------------------------------------------------------------------------
 */
+
+
+#container {
+
+}
+
+#header {
+border:solid;
+padding-left: 30px;
+}
+
+a {
+text-decoration:none;
+color: Green;
+}
+
+a:hover {
+text-decoration:underline;
+color: orange;
+}
+
+p {
+font-family: "Trebuchet MS", Helvetica, Arial, sans-serif;
+}
+
+body {
+
+}
+
+#rightsidebar {
+
+}
+
+#leftsidebar {
+
+}
+
+.rightsidebarbox {
+
+}
+
+.leftsidebarbox {
+
+}
+
+#centerbar {
+
+}
+
+#footer {
+border:solid;
+clear: both;
+text-align:center;
+}
