--- a/webbstuff/GoCrazyStyle.css
+++ b/webbstuff/GoCrazyStyle.css
@@ -22,7 +22,12 @@ margin-left: auto;
 margin-right: auto;
 max-width: 1400px;
 min-width: 1000px;
-background-image:url('paw.png')
+}
+
+img.paw {
+width:30%;
+z-index:-1;
+margin-right:0px;
 }
 
 #header {
